# openday-badges

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
static/: styles.css
templates/: base.html  index.html  login.html
