[tool.poetry]
name = "badge-manager"
version = "0.1.0"
description = "Conference badge manager with SVG to PNG generation"
authors = ["Badge Team <noreply@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
gunicorn = "^22.0.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
